# crossHello

./: .gitignore  .vimproject  Makefile.am  configure.ac  myreconf.sh
src/: Makefile.am  crossHello.c
